--- a/Dockerfile_jenkins
+++ b/Dockerfile_jenkins
@@ -1,6 +1,20 @@
 FROM jenkins/jenkins:lts-jdk11
 # if we want to install via apt
 USER root
-RUN apt-get update && curl -fsSL https://get.docker.com | sh;
+RUN apt-get update && curl -fsSL https://get.docker.com | sh && \
+    apt-get install -y gnupg software-properties-common && \
+    curl https://apt.releases.hashicorp.com/gpg | \
+    gpg --dearmor | \
+    tee /usr/share/keyrings/hashicorp-archive-keyring.gpg && \
+    gpg --no-default-keyring \
+    --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+    --fingerprint && \
+    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
+    https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+    tee /etc/apt/sources.list.d/hashicorp.list && \
+    apt update && apt-get install terraform
+
+
+
 # drop back to the regular jenkins user - good practice
 #USER jenkins
